[package]
name = "grub-uki-hook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
env_logger = "0.11.1"
glob = "0.3.1"
indent = "0.1.1"
log = "0.4.20"
regex = "1.10.3"
shell-quote = "0.5.0"
whoami = "1.4.1"
